==> ToolboxPlane/RadioControlSoftware/hal/LoRa.cpp <==
#include "LoRa.h"
#define REG_FIFO                 0x00
#define REG_OP_MODE              0x01
#define REG_FRF_MSB              0x06
#define REG_FRF_MID              0x07
#define REG_FRF_LSB              0x08
#define REG_PA_CONFIG            0x09
#define REG_LNA                  0x0c
#define REG_FIFO_ADDR_PTR        0x0d
#define REG_FIFO_TX_BASE_ADDR    0x0e
#define REG_FIFO_RX_BASE_ADDR    0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS            0x12
#define REG_RX_NB_BYTES          0x13
#define REG_PKT_SNR_VALUE        0x19
#define REG_PKT_RSSI_VALUE       0x1a
#define REG_MODEM_CONFIG_1       0x1d
#define REG_MODEM_CONFIG_2       0x1e
#define REG_PREAMBLE_MSB         0x20
#define REG_PREAMBLE_LSB         0x21
#define REG_PAYLOAD_LENGTH       0x22
#define REG_MODEM_CONFIG_3       0x26
#define REG_RSSI_WIDEBAND        0x2c
#define REG_DETECTION_OPTIMIZE   0x31
#define REG_DETECTION_THRESHOLD  0x37
#define REG_SYNC_WORD            0x39
#define REG_DIO_MAPPING_1        0x40
#define REG_VERSION              0x42
#define MODE_LONG_RANGE_MODE     0x80
#define MODE_SLEEP               0x00
#define MODE_STDBY               0x01
#define MODE_TX                  0x03
#define MODE_RX_CONTINUOUS       0x05
#define MODE_RX_SINGLE           0x06
#define PA_BOOST                 0x80
#define IRQ_TX_DONE_MASK           0x08
#define IRQ_PAYLOAD_CRC_ERROR_MASK 0x20
#define IRQ_RX_DONE_MASK           0x40
#define MAX_PKT_LENGTH           255

int LoRaClass::begin(long frequency) {
    // setup pins
    //pinMode(_ss, OUTPUT);
    LORA_CS_DDR |= (1 << LORA_CS_BIT);
    // set SS high
    //digitalWrite(_ss, HIGH);
    LORA_CS_PORT |= (1 << LORA_CS_BIT);

    /*if (_reset != -1) {
        pinMode(_reset, OUTPUT);

        // perform reset
        digitalWrite(_reset, LOW);
        delay(10);
        digitalWrite(_reset, HIGH);
        delay(10);
    }*/

    // start SPI
    //SPI.begin();
    SPCR = (1 << SPE) | (1 << MSTR) | (1 << SPR0);//mode 0,fosc/4

    // check version
    uint8_t version = readRegister(REG_VERSION);
    if (version != 0x12) {
        return 0;
    }

    // put in sleep mode
    sleep();

    // set frequency
    setFrequency(frequency);

    // set base addresses
    writeRegister(REG_FIFO_TX_BASE_ADDR, 0);
    writeRegister(REG_FIFO_RX_BASE_ADDR, 0);

    // set LNA boost
    writeRegister(REG_LNA, readRegister(REG_LNA) | 0x03);

    // set auto AGC
    writeRegister(REG_MODEM_CONFIG_3, 0x04);

    // set output power to 17 dBm
    setTxPower(17);

    // put in standby mode
    idle();

    return 1;
}

uint8_t LoRaClass::singleTransfer(uint8_t address, uint8_t value) {
    uint8_t response;

    LORA_CS_PORT &= ~(1 << LORA_CS_BIT);
    //digitalWrite(_ss, LOW);

   // SPI.beginTransaction(_spiSettings);
    SPDR = address;
    //SPI.transfer(address);
    while(!(SPSR & (1<<SPIF) ));
    SPDR = value;
    while(!(SPSR & (1<<SPIF) ));
    response = SPDR;
 //   SPI.endTransaction();

//    digitalWrite(_ss, HIGH);
    LORA_CS_PORT |= (1 << LORA_CS_BIT);

    return response;
}
